--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My App",
-  "short_name": "My App",
+  "name": "Discovery Jeri",
+  "short_name": "Discovery Jeri",
   "description": "My App description",
   "start_url": "/",
   "display": "standalone",
