--- a/package.json
+++ b/package.json
@@ -20,11 +20,22 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
+    "@fooloomanzoo/datetime-picker": "github:fooloomanzoo/datetime-picker",
     "@polymer/app-layout": "^3.0.0",
     "@polymer/lit-element": "^0.6.2",
     "@polymer/polymer": "^3.0.0",
+    "@vaadin/vaadin-checkbox": "^2.2.4",
+    "@vaadin/vaadin-date-picker": "^3.3.1",
+    "@vaadin/vaadin-form-layout": "^2.1.1",
+    "@vaadin/vaadin-list-box": "^1.1.0",
+    "@vaadin/vaadin-select": "^2.0.0",
+    "@vaadin/vaadin-text-field": "^2.1.5",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "pwa-helpers": "^0.9.0"
+    "pwa-helpers": "^0.9.0",
+    "wired-button": "^0.8.0",
+    "wired-checkbox": "^0.8.0",
+    "wired-combo": "^0.8.1",
+    "wired-input": "^0.8.2"
   },
   "devDependencies": {
     "axe-core": "^3.0.0",
