--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@fooloomanzoo/datetime-picker": "github:fooloomanzoo/datetime-picker",
     "@polymer/app-layout": "^3.0.0",
     "@polymer/lit-element": "^0.6.2",
+    "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-card": "^3.0.1",
+    "@polymer/paper-fab": "^3.0.1",
     "@polymer/polymer": "^3.0.0",
     "@vaadin/vaadin-checkbox": "^2.2.4",
     "@vaadin/vaadin-date-picker": "^3.3.1",
@@ -30,7 +33,9 @@
     "@vaadin/vaadin-list-box": "^1.1.0",
     "@vaadin/vaadin-select": "^2.0.0",
     "@vaadin/vaadin-text-field": "^2.1.5",
+    "@vaadin/vaadin-time-picker": "^1.1.1",
     "@webcomponents/webcomponentsjs": "^2.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "pwa-helpers": "^0.9.0",
     "wired-button": "^0.8.0",
     "wired-checkbox": "^0.8.0",
