--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fooloomanzoo/datetime-picker": "github:fooloomanzoo/datetime-picker",
     "@polymer/app-layout": "^3.0.0",
+    "@polymer/iron-dropdown": "^3.0.1",
     "@polymer/lit-element": "^0.6.2",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-card": "^3.0.1",
@@ -37,6 +38,7 @@
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "pwa-helpers": "^0.9.0",
+    "web-animations-js": "^2.3.1",
     "wired-button": "^0.8.0",
     "wired-checkbox": "^0.8.0",
     "wired-combo": "^0.8.1",
