--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Discovery Jeri",
+  "name": "DiscoveryJeri",
   "short_name": "Discovery Jeri",
-  "description": "My App description",
+  "description": "Agência de turismo receptivo na vila de Jericoacoara. Traslados desde R$ 100 e passeios inesquecíveis",
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#3f51b5",
