--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@polymer/polymer": "^3.0.0",
     "@vaadin/vaadin-checkbox": "^2.2.4",
     "@vaadin/vaadin-date-picker": "^3.3.1",
+    "@vaadin/vaadin-dialog": "^2.2.1",
     "@vaadin/vaadin-form-layout": "^2.1.1",
     "@vaadin/vaadin-list-box": "^1.1.0",
     "@vaadin/vaadin-select": "^2.0.0",
