--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
+    "@dabolus/localized-lit-element": "^0.4.2",
     "@fooloomanzoo/datetime-picker": "github:fooloomanzoo/datetime-picker",
     "@polymer/app-layout": "^3.0.0",
+    "@polymer/app-localize-behavior": "^3.0.1",
     "@polymer/iron-dropdown": "^3.0.1",
     "@polymer/lit-element": "^0.6.2",
     "@polymer/paper-button": "^3.0.1",
@@ -33,6 +35,7 @@
     "@vaadin/vaadin-date-picker": "^3.3.1",
     "@vaadin/vaadin-dialog": "^2.2.1",
     "@vaadin/vaadin-form-layout": "^2.1.1",
+    "@vaadin/vaadin-icons": "^4.2.1",
     "@vaadin/vaadin-list-box": "^1.1.0",
     "@vaadin/vaadin-select": "^2.0.0",
     "@vaadin/vaadin-text-field": "^2.1.5",
