--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@polymer/app-layout": "^3.0.0",
     "@polymer/app-localize-behavior": "^3.0.1",
     "@polymer/iron-dropdown": "^3.0.1",
+    "@polymer/iron-pages": "^3.0.1",
     "@polymer/lit-element": "^0.6.2",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-card": "^3.0.1",
     "@polymer/paper-fab": "^3.0.1",
     "@polymer/paper-spinner": "^3.0.1",
+    "@polymer/paper-tabs": "^3.0.1",
     "@polymer/polymer": "^3.0.0",
     "@vaadin/vaadin-checkbox": "^2.2.4",
     "@vaadin/vaadin-date-picker": "^3.3.1",
@@ -38,6 +40,7 @@
     "@vaadin/vaadin-icons": "^4.2.1",
     "@vaadin/vaadin-list-box": "^1.1.0",
     "@vaadin/vaadin-select": "^2.0.0",
+    "@vaadin/vaadin-tabs": "^2.1.1",
     "@vaadin/vaadin-text-field": "^2.1.5",
     "@vaadin/vaadin-time-picker": "^1.1.1",
     "@webcomponents/webcomponentsjs": "^2.0.0",
